Responsividade Header Tablet

--- a/site/style.css
+++ b/site/style.css
@@ -7,7 +7,6 @@
   color: #ffffff;
   background-color: #000000;
   font-family: "Bebas Neue", sans-serif;
-  letter-spacing: 0.1vw;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -50,15 +49,17 @@
 
 #nav_contador h1 {
   font-size: 2vw;
+  line-height: 2.5vw;
 }
 
 .contador_titulo {
   font-size: 1.5vw;
+  letter-spacing: 0.2vw;
   margin-bottom: -1vw;
 }
 
 .contador_valor {
-  font-size: 7vw;
+  font-size: 8vw;
   color: #000000;
   text-shadow: 0.14vw 0 #e3e3e3, -0.14vw 0 #e3e3e3, 0 0.14vw #e3e3e3,
     0 -0.14vw #e3e3e3, 0.07vw 0.07vw #e3e3e3, -0.07vw -0.07vw #e3e3e3,
@@ -73,11 +74,12 @@
 }
 
 .item_menu {
-  padding: 0.3rem 0.8rem;
+  padding: 0.3vw 0.8vw;
   font-size: 1.7vw;
   text-decoration: none;
   color: #ffffff;
   transition: 0.5s;
+  margin: 0 0.5vw;
 }
 
 .item_menu:hover {
@@ -86,4 +88,39 @@
   color: #000000;
   text-decoration: underline;
   transition: 0.5s;
+}
+
+@media only screen and (max-width: 768px) {
+  #brasao {
+    width: 20vw;
+  }
+
+  #nav_contador li {
+    margin: 1.5vw;
+  }
+
+  #nav_contador h1 {
+    font-size: 3vw;
+    line-height: 3.5vw;
+  }
+
+  .contador_titulo {
+    font-size: 3vw;
+  }
+
+  .contador_valor {
+    font-size: 12vw;
+  }
+
+  .linha-vertical {
+    height: 15vw;
+    margin-top: -3vw;
+  }
+
+  .item_menu {
+    font-size: 3vw;
+  }
+}
+
+@media only screen and (max-width: 480px) {
 }
