--- a/site/style.css
+++ b/site/style.css
@@ -4,6 +4,7 @@
 }
 
 #navbar {
+  letter-spacing: 0.1vw;
   color: #ffffff;
   background-color: #000000;
   font-family: "Bebas Neue", sans-serif;
@@ -60,6 +61,8 @@
 
 .contador_valor {
   font-size: 8vw;
+  padding-left: 0.4vw;
+  letter-spacing: 0.5vw;
   color: #000000;
   text-shadow: 0.14vw 0 #e3e3e3, -0.14vw 0 #e3e3e3, 0 0.14vw #e3e3e3,
     0 -0.14vw #e3e3e3, 0.07vw 0.07vw #e3e3e3, -0.07vw -0.07vw #e3e3e3,
@@ -91,6 +94,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  #navbar {
+    letter-spacing: 0.2vw;
+  }
+
   #brasao {
     width: 20vw;
   }
@@ -100,8 +107,8 @@
   }
 
   #nav_contador h1 {
-    font-size: 3vw;
-    line-height: 3.5vw;
+    font-size: 3.5vw;
+    line-height: 4vw;
   }
 
   .contador_titulo {
@@ -110,6 +117,8 @@
 
   .contador_valor {
     font-size: 12vw;
+    padding-left: 0.6vw;
+    letter-spacing: 0.6vw;
   }
 
   .linha-vertical {
@@ -123,4 +132,50 @@
 }
 
 @media only screen and (max-width: 480px) {
+  #navbar {
+    flex-direction: column;
+    padding: 2vw 3vw;
+  }
+
+  #brasao {
+    width: 50vw;
+    margin: 2vw;
+  }
+
+  #nav_contador,
+  #nav_menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  #nav_contador h1 {
+    font-size: 5vw;
+    line-height: 5vw;
+  }
+
+  .contador_titulo {
+    font-size: 4vw;
+    margin-bottom: -2vw;
+  }
+
+  .contador_valor {
+    font-size: 17vw;
+    padding-left: 1vw;
+    letter-spacing: 1vw;
+  }
+
+  .linha-vertical {
+    height: 20vw;
+    margin-top: -4vw;
+  }
+
+  .item_menu {
+    font-size: 4vw;
+    padding: 0.3vw 1vw;
+    margin: 0 1vw;
+  }
 }
