--- a/site/style.css
+++ b/site/style.css
@@ -105,7 +105,7 @@
 #itens_menu {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -171,9 +171,8 @@
   color: #000000;
   font-size: 10vw;
   letter-spacing: 0.4vw;
-  text-shadow: 0.073vw 0 #8e8e8e, -0.073vw 0 #8e8e8e, 0 0.073vw #8e8e8e,
-    0 -0.073vw #8e8e8e, 0.073vw 0.073vw #8e8e8e, -0.073vw -0.073vw #8e8e8e,
-    0.073vw -0.073vw #8e8e8e, -0.073vw 0.073vw #8e8e8e;
+  text-shadow: 1px 0 #8e8e8e, -1px 0 #8e8e8e, 0 1px #8e8e8e, 0 -1px #8e8e8e,
+    1px 1px #8e8e8e, -1px -1px #8e8e8e, 1px -1px #8e8e8e, -1px 1px #8e8e8e;
 }
 
 .subtitulo {
@@ -373,6 +372,31 @@
     width: 12vw;
     margin: 1vw 2vw;
   }
+
+  .titulo {
+    font-size: 14vw;
+  }
+
+  .subtitulo {
+    font-size: 1.8vw;
+    margin-top: -4vw;
+    margin-left: -8vw;
+  }
+
+  .subtitulo_deco {
+    font-size: 2vw;
+    margin: 1.5vw 2vw;
+  }
+
+  .texto {
+    font-size: 1.8vw;
+    width: 65%;
+    line-height: 2.5vw;
+  }
+
+  .texto p {
+    margin: 2.5vw 0vw;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -421,5 +445,51 @@
     font-size: 4vw;
     padding: 0.3vw 1vw;
     margin: 0 1vw;
+  }
+
+  #sobre {
+    background-image: url("img/sobre.jpg");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: auto 100%;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 8vw 7vw;
+  }
+
+  .titulo {
+    font-size: 20vw;
+    letter-spacing: 1.5vw;
+  }
+
+  .subtitulo {
+    font-size: 2.5vw;
+    margin-top: -6vw;
+    margin-left: -12vw;
+    text-shadow: 1px 0 #000000, -1px 0 #000000, 0 1px #000000, 0 -1px #000000,
+      1px 1px #000000, -1px -1px #000000, 1px -1px #000000, -1px 1px #000000;
+  }
+
+  .subtitulo_deco {
+    font-size: 3vw;
+    margin: 2vw 4vw;
+  }
+
+  .texto {
+    color: #ffffff;
+    font-size: 3vw;
+    width: 100%;
+    line-height: 3.5vw;
+    text-shadow: 1px 0 #000000, -1px 0 #000000, 0 1px #000000, 0 -1px #000000,
+      1px 1px #000000, -1px -1px #000000, 1px -1px #000000, -1px 1px #000000;
+  }
+
+  .texto p {
+    margin: 2.5vw 0vw;
   }
 }
