--- a/site/style.css
+++ b/site/style.css
@@ -4,7 +4,7 @@
 }
 
 #navbar {
-  letter-spacing: 0.1vw;
+  letter-spacing: 0.1rem;
   color: #ffffff;
   background-color: #000000;
   font-family: "Bebas Neue", sans-serif;
@@ -13,7 +13,7 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  padding: 1vw 3vw;
+  padding: 0.5rem 2.5rem;
 }
 
 .sticky {
@@ -27,7 +27,7 @@
 }
 
 #brasao {
-  width: 12vw;
+  width: 170px;
 }
 
 #navbar_itens {
@@ -41,7 +41,7 @@
   list-style: none;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: flex-end;
   align-items: center;
   align-content: center;
@@ -54,35 +54,37 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  margin: 1vw;
+  margin: 1rem;
 }
 
-#nav_contador h1 {
-  font-size: 2vw;
-  line-height: 2.5vw;
+#hoje {
+  font-size: 1.7rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#hoje p {
+  margin: 0rem 0.3rem;
 }
 
 .contador_titulo {
-  font-size: 1.5vw;
-  letter-spacing: 0.2vw;
-  margin-bottom: -1vw;
+  font-size: 1.3rem;
+  letter-spacing: 0.2rem;
+  margin-bottom: -0.8rem;
 }
 
 .contador_valor {
-  font-size: 8vw;
-  padding-left: 0.4vw;
-  letter-spacing: 0.5vw;
+  font-size: 6.5rem;
   color: #000000;
-  text-shadow: 0.14vw 0 #e3e3e3, -0.14vw 0 #e3e3e3, 0 0.14vw #e3e3e3,
-    0 -0.14vw #e3e3e3, 0.07vw 0.07vw #e3e3e3, -0.07vw -0.07vw #e3e3e3,
-    0.07vw -0.07vw #e3e3e3, -0.07vw 0.07vw #e3e3e3;
+  text-shadow: 2px 0 #cdcccc, -2px 0 #cdcccc, 0 2px #cdcccc, 0 -2px #cdcccc,
+    1px 1px #cdcccc, -1px -1px #cdcccc, 1px -1px #cdcccc, -1px 1px #cdcccc;
 }
 
 .linha-vertical {
   color: #444444;
-  height: 8vw;
+  height: 7rem;
   border-left: 2px solid;
-  margin-top: -1vw;
+  margin-top: 1.5rem;
 }
 
 #nav_menu {
@@ -97,8 +99,8 @@
 
 #brasao_nav {
   display: none;
-  width: 6vw;
-  margin: 0.5vw 2vw;
+  width: 5rem;
+  margin: 0.4rem 1.7rem;
   align-self: flex-start;
 }
 
@@ -113,12 +115,12 @@
 }
 
 .item_menu {
-  padding: 0.3vw 0.8vw;
-  font-size: 1.7vw;
+  padding: 0.25rem 0.7rem;
+  font-size: 1.3rem;
   text-decoration: none;
   color: #ffffff;
   transition: 0.5s;
-  margin: 0 0.5vw;
+  margin: 0 0.4rem;
 }
 
 .item_menu:hover {
@@ -300,35 +302,76 @@
   letter-spacing: 0.1vw;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   #navbar {
-    letter-spacing: 0.2vw;
-    flex-direction: column;
-    padding: 2vw 3vw;
-  }
-
-  #nav_contador li {
-    margin: 1.5vw;
+    padding: 0.9rem 1rem;
   }
 
   #brasao {
-    width: 50vw;
+    width: 125px;
+  }
+
+  #nav_contador li {
+    margin: 0.8rem;
+  }
+
+  #hoje {
+    font-size: 1.5rem;
+  }
+
+  .linha-vertical {
+    height: 6.5rem;
+  }
+
+  .contador_valor {
+    font-size: 6rem;
+  }
+
+  .item_menu {
+    padding: 0.25rem 0.7rem;
+    font-size: 1.3rem;
+    margin: 0 0.2rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #navbar {
+    flex-direction: column;
+  }
+
+  #navbar_itens {
+    align-content: center;
+  }
+
+  #nav_contador {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #hoje {
+    flex-direction: row;
+  }
+
+  #nav_contador li {
     margin: 2vw;
   }
 
-  #nav_contador,
+  #brasao {
+    width: 40vw;
+    margin: 2vw;
+  }
+
   #nav_menu {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     align-content: center;
   }
 
   #nav_contador h1 {
-    font-size: 5vw;
-    line-height: 5vw;
+    font-size: 2rem;
   }
 
   .contador_titulo {
@@ -337,20 +380,17 @@
   }
 
   .contador_valor {
-    font-size: 17vw;
-    padding-left: 1vw;
-    letter-spacing: 1vw;
+    font-size: 18vw;
   }
 
   .linha-vertical {
-    height: 20vw;
-    margin-top: -4vw;
+    height: 19vw;
   }
 
   .item_menu {
-    font-size: 4vw;
+    font-size: 3.5vw;
     padding: 0.3vw 1vw;
-    margin: 0 1vw;
+    margin: 0 0.5vw;
   }
 
   #sobre {
@@ -423,4 +463,7 @@
 }
 
 @media only screen and (max-width: 480px) {
+  #itens_menu {
+    flex-wrap: wrap;
+  }
 }
