--- a/site/style.css
+++ b/site/style.css
@@ -30,7 +30,7 @@
 #hamburger {
   display: none;
   position: fixed;
-  top: 30px;
+  top: 40px;
   right: 20px;
   z-index: 99;
   border: 0;
@@ -512,10 +512,10 @@
 
 @media only screen and (max-width: 480px) {
   #brasao_nav {
-    width: 5rem;
+    width: 7rem;
     padding: 0.5rem;
     margin: 0.2rem 1.7rem;
-    margin-bottom: -2rem;
+    margin-bottom: -3rem;
   }
 
   #menu_mobile {
@@ -526,11 +526,11 @@
     list-style-type: none;
     background-color: #000000;
     position: fixed;
-    top: 90px;
+    top: 0;
     left: 0;
     right: 0;
     z-index: 99;
-    padding-top: 2rem;
+    padding-top: 10rem;
   }
 
   #menu_mobile li {
@@ -562,11 +562,12 @@
 
   #itens_menu li {
     background-color: #000000;
-    border: 2px solid #cdcccc;
+    border-bottom: 2px solid #cdcccc;
     margin: 1vw 1vw;
     padding: 0.5vw 3vw;
     width: 20vw;
     text-align: center;
+    border-radius: 1rem;
   }
 
   .item_menu {
