--- a/site/style.css
+++ b/site/style.css
@@ -17,31 +17,66 @@
   padding: 0.5rem 2.5rem;
 }
 
-.sticky {
-  background-color: #000000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  transition: 0.5s;
-  z-index: 999;
-}
-
 #hamburger {
   display: none;
   position: fixed;
   top: 40px;
-  right: 20px;
-  z-index: 99;
+  right: 15px;
+  z-index: 10000;
   border: 0;
-  color: #ffffff;
+  color: #bbbbbb;
   font-size: 2rem;
   background-color: transparent;
   cursor: pointer;
 }
 
-#menu_mobile {
+#nav_fixo {
+  font-size: 1.5rem;
+  font-family: "Bebas Neue", sans-serif;
+  list-style-type: none;
   display: none;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: #000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+}
+
+.opcao_navfixo {
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  margin: 0rem 0.3rem;
+  padding: 0;
+}
+
+.opcao_navfixo li {
+  background-color: #000000;
+  width: 6rem;
+  border-radius: 1rem;
+  transition: 0.5s;
+}
+
+.opcao_navfixo li:hover {
+  background-color: #ffffff;
+  color: #000000;
+  text-decoration: underline;
+  transition: 0.5s;
+}
+
+#brasao_nav img {
+  width: 5rem;
+  padding: 0.5rem;
+  margin-bottom: -3rem;
+  background-color: #000000;
+  border-radius: 5rem;
+  cursor: pointer;
 }
 
 #botaoTopo {
@@ -123,16 +158,6 @@
   height: 7rem;
   border-left: 2px solid;
   margin-top: 1.5rem;
-}
-
-#brasao_nav {
-  display: none;
-  width: 5rem;
-  padding: 0.5rem;
-  margin: 0.2rem 1.7rem;
-  margin-bottom: -2rem;
-  background-color: #000000;
-  border-radius: 5rem;
 }
 
 #itens_menu {
@@ -400,12 +425,26 @@
     margin: 2vw;
   }
 
-  #brasao_nav {
-    width: 15vw;
-    padding: 0.5vw;
-    margin: 0.2vw 1.7vw;
-    margin-bottom: -8vw;
-    border-radius: 5rem;
+  #nav_fixo {
+    font-size: 3.5vw;
+    flex-wrap: nowrap;
+  }
+
+  .opcao_navfixo {
+    margin: 0rem 0.4vw;
+    padding: 0;
+  }
+
+  .opcao_navfixo li {
+    background-color: #000000;
+    width: 12vw;
+  }
+
+  #brasao_nav img {
+    width: 14vw;
+    padding: 0.8vw;
+    margin-bottom: -5vw;
+    border-radius: 8.5vw;
   }
 
   #nav_menu {
@@ -511,49 +550,51 @@
 }
 
 @media only screen and (max-width: 480px) {
-  #brasao_nav {
-    width: 7rem;
-    padding: 0.5rem;
-    margin: 0.2rem 1.7rem;
-    margin-bottom: -3rem;
+  #hamburger {
+    display: block;
   }
 
-  #menu_mobile {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: normal;
-    letter-spacing: 0.2vw;
-    font-size: 6vw;
-    list-style-type: none;
-    background-color: #000000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 99;
-    padding-top: 10rem;
+  #nav_fixo {
+    font-size: 1.5rem;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.5rem 1rem;
   }
 
-  #menu_mobile li {
-    background-color: #000000;
-    text-align: center;
-    padding: 0.2rem 0rem;
-    margin: 0.5rem;
-    border: 1px solid #ffffff;
+  .opcao_navfixo {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
   }
 
-  #menu_mobile li:hover {
-    background-color: #ffffff;
+  .opcao_navfixo li {
+    display: none;
+    background-color: #bbbbbb;
     color: #000000;
+    padding: 0.2rem 0rem;
+    margin: 0.2rem 0rem;
+    width: 100%;
+    border-radius: 0.2rem;
   }
 
-  #menu_mobile a {
-    text-decoration: none;
+  .opcao_navfixo li:hover {
+    background-color: #101010;
     color: #ffffff;
   }
 
-  #menu_mobile a:hover {
-    text-decoration: underline;
-    color: #000000;
+  #brasao_nav img {
+    width: 5rem;
+    padding: 0.2rem;
+    margin: 0rem;
+    border-radius: 5rem;
+  }
+
+  #brasao_nav {
+    order: -1;
   }
 
   #itens_menu {
@@ -579,7 +620,7 @@
   .item_menu:hover {
     background-color: transparent;
     color: #ffffff;
-    text-decoration: none;
+    text-decoration: underline;
     transition: 0;
   }
 }
