--- a/site/style.css
+++ b/site/style.css
@@ -20,11 +20,11 @@
 #hamburger {
   display: none;
   position: fixed;
-  top: 20px;
+  top: 25px;
   right: 15px;
   z-index: 10000;
   border: 0;
-  color: #bbbbbb;
+  color: #dddddd;
   font-size: 2rem;
   background-color: transparent;
   cursor: pointer;
@@ -193,7 +193,7 @@
 
 #topo {
   width: 100%;
-  background-image: url("img/background.png");
+  background-image: url("img/background.webp");
   background-size: 100% 100%;
   text-align: center;
   filter: contrast(1.1);
@@ -205,7 +205,7 @@
 }
 
 #sobre {
-  background-image: url("img/sobre.jpg");
+  background-image: url("img/sobre.webp");
   background-repeat: no-repeat;
   background-position: left;
   background-size: auto 100%;
@@ -302,7 +302,7 @@
 }
 
 #historia {
-  background-image: url("img/bg_preto.jpg");
+  background-image: url("img/bg_preto.webp");
   background-size: auto;
   background-color: #000000;
   font-family: "Bebas Neue", sans-serif;
@@ -481,18 +481,7 @@
   }
 
   #sobre {
-    background-image: url("img/sobre.jpg");
-    background-repeat: no-repeat;
-    background-position: left;
-    background-size: auto 100%;
-    background-color: #000000;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     align-content: center;
-    padding: 8vw 7vw;
   }
 
   .titulo {
@@ -573,7 +562,7 @@
 
   .opcao_navfixo li {
     display: none;
-    background-color: #bbbbbb;
+    background-color: #dddddd;
     color: #000000;
     padding: 0.2rem 0rem;
     margin: 0.2rem 0rem;
@@ -623,5 +612,9 @@
     color: #ffffff;
     text-decoration: underline;
     transition: 0;
+  }
+
+  #topo img {
+    width: 70%;
   }
 }
