--- a/site/style.css
+++ b/site/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  list-style-type: none;
 }
 
 #navbar {
@@ -31,9 +32,8 @@
 }
 
 #nav_fixo {
-  font-size: 1.5rem;
-  font-family: "Bebas Neue", sans-serif;
-  list-style-type: none;
+  font-size: 1.3rem;
+  font-family: "Oswald", sans-serif;
   display: none;
   flex-direction: row;
   flex-wrap: wrap;
@@ -118,6 +118,16 @@
   justify-content: flex-end;
   align-items: center;
   align-content: center;
+  font-family: "Oswald", sans-serif;
+}
+
+#nav_contador div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 #nav_contador li {
@@ -127,13 +137,21 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  margin: 1rem;
+}
+
+#nav_contador h2 {
+  margin: 0.1rem 0rem;
+}
+
+#nav_menu {
+  margin-top: 2rem;
 }
 
 #hoje {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   display: flex;
   flex-direction: column;
+  padding: 0rem 1rem;
 }
 
 #hoje p {
@@ -142,12 +160,16 @@
 
 .contador_titulo {
   font-size: 1.3rem;
-  letter-spacing: 0.2rem;
-  margin-bottom: -0.8rem;
+  font-family: "Oswald", sans-serif;
+  line-height: 1.8rem;
 }
 
 .contador_valor {
-  font-size: 6.5rem;
+  font-family: "Bebas Neue", sans-serif;
+  line-height: 4.5rem;
+  padding: 0rem 1.5rem;
+  padding-top: 1rem;
+  font-size: 7rem;
   color: #000000;
   text-shadow: 2px 0 #cdcccc, -2px 0 #cdcccc, 0 2px #cdcccc, 0 -2px #cdcccc,
     1px 1px #cdcccc, -1px -1px #cdcccc, 1px -1px #cdcccc, -1px 1px #cdcccc;
@@ -155,9 +177,8 @@
 
 .linha-vertical {
   color: #444444;
-  height: 7rem;
+  height: 7.5rem;
   border-left: 2px solid;
-  margin-top: 1.5rem;
 }
 
 #itens_menu {
@@ -167,7 +188,6 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  list-style-type: none;
 }
 
 #itens_menu div {
@@ -176,7 +196,7 @@
 
 .item_menu {
   padding: 0.25rem 0.7rem;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   text-decoration: none;
   color: #ffffff;
   transition: 0.5s;
@@ -275,7 +295,6 @@
 #imgs_galeria {
   width: 100%;
   filter: grayscale(100%);
-  list-style-type: none;
   background-color: #131315;
   display: flex;
   flex-direction: row;
@@ -290,7 +309,6 @@
 
 #footer_galeria {
   width: 100%;
-  list-style-type: none;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -402,21 +420,8 @@
     width: 125px;
   }
 
-  #nav_contador li {
-    margin: 0.8rem;
-  }
-
   #hoje {
     font-size: 1.5rem;
-  }
-
-  .linha-vertical {
-    height: 6.5rem;
-  }
-
-  .contador_valor {
-    font-size: 6rem;
-    letter-spacing: 1vw;
   }
 
   .item_menu {
@@ -451,8 +456,12 @@
     font-weight: normal;
   }
 
-  #nav_contador li {
-    margin: 0vw 3vw;
+  #nav_contador div {
+    margin: 2vw 0vw;
+  }
+
+  #nav_contador h2 {
+    margin: 1vw 0vw;
   }
 
   #brasao {
@@ -461,7 +470,7 @@
   }
 
   #nav_fixo {
-    font-size: 3.5vw;
+    font-size: 2.8vw;
     flex-wrap: nowrap;
   }
 
@@ -489,32 +498,34 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    margin-top: -1rem;
-    padding: 1rem;
+    padding: 2vw;
     border: 1px solid white;
     border-radius: 5rem;
+    margin-top: 2vw;
   }
 
   .contador_titulo {
+    line-height: 4vw;
     font-size: 4vw;
-    margin-bottom: -2vw;
   }
 
   .contador_valor {
-    font-size: 20vw;
+    line-height: 14vw;
+    padding: 0vw 5vw;
+    padding-top: 2vw;
+    font-size: 22vw;
   }
 
   .linha-vertical {
-    height: 20vw;
-    margin-bottom: 8vw;
+    height: 23vw;
   }
 
   .primeira {
-    display: none;
+    border: 0;
   }
 
   .item_menu {
-    font-size: 3vw;
+    font-size: 3.5vw;
     padding: 0.3vw 1vw;
     margin: 0 0.5vw;
   }
@@ -565,7 +576,7 @@
   }
 
   #nav_fixo {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: flex-start;
